Try inlining constant values.